Fix: use Railway MySQL environment variables

--- a/backend/process.env
+++ b/backend/process.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=Sathish@3804
-DB_NAME=career_site
-SECRET_KEY=career_site_secret_key
+MYSQL_HOST=mysql.railway.internal
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=eWZleokvboHemelllZYqcDnaedmirUYQ
+MYSQL_DATABASE=railway
